fix: clear VITE_API_BASE_URL for development and add proxy configuration for API routes

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 # Frontend needs only the public API base; keep AI/Gmail secrets on the server (.env does not use VITE_* for those).
-VITE_API_BASE_URL=http://localhost:4000
+# Use same-origin + Vite proxy when developing behind the tunnel.
+VITE_API_BASE_URL=
