--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
+    "@mui/x-data-grid": "^7.0.0",
     "@tanstack/react-query": "^5.59.0",
     "dayjs": "^1.11.19",
     "react": "^18.3.1",
